--- a/app/src/main/res/layout/activity_health_status.xml
+++ b/app/src/main/res/layout/activity_health_status.xml
@@ -5,66 +5,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/darkBG"
+    android:background="@color/darkBackground"
     tools:context=".HealthStatusActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="15dp"
         android:padding="10dp"
-        android:background="@color/darkBG">
+        android:background="@color/darkBackground">
 
         <ImageView
             android:id="@+id/ivback"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="5dp"
             android:src="@drawable/ic_back"
             android:layout_centerVertical="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Weekly Health Status"
-            android:fontFamily="@font/opensans"
+            android:text="Health Status"
+            android:paddingTop="5dp"
+            android:fontFamily="@font/poppinssemibold"
             android:layout_centerInParent="true"
             android:textStyle="bold"
-            android:textSize="@dimen/_15sdp"
-            android:textColor="@color/yellow" />
-
-        <TextView
-            android:id="@+id/tvinfo"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_width="@dimen/_30sdp"
-            android:background="@drawable/circle2"
-            android:textColor="@color/yellow"
-            android:fontFamily="@font/opensans"
-            android:text="\?"
-            android:textStyle="bold"
             android:textSize="@dimen/_16sdp"
-            android:gravity="center"
-            android:layout_alignParentRight="true"/>
+            android:textColor="@color/white" />
+
+        <ImageView
+            android:id="@+id/tvinfo"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_info"
+            android:layout_centerVertical="true" />
 
     </RelativeLayout>
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
         android:layout_gravity="center"
-        android:layout_width="@dimen/_280sdp"
-        android:layout_height="@dimen/_320sdp"
+        android:layout_width="@dimen/_260sdp"
+        android:layout_height="@dimen/_300sdp"
         android:layout_marginTop="@dimen/_20sdp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hey Rajat, you seem to be really improving this week!"
-        android:fontFamily="@font/opensans"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_40sdp"
+        android:text="Hey Rajat,\nyou seem to be really improving this week!"
+        android:fontFamily="@font/poppinsregular"
+        android:layout_marginLeft="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:textStyle="bold"
         android:textSize="@dimen/_11sdp"
-        android:textColor="@color/yellow" />
+        android:textColor="@color/white" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Day Average:"
-            android:fontFamily="@font/opensans"
+            android:fontFamily="@font/poppinsregular"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="@dimen/_11sdp"
@@ -88,7 +84,7 @@
             android:layout_height="wrap_content"
             android:text="6 / 7"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:fontFamily="@font/opensans"
+            android:fontFamily="@font/poppinsregular"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="@dimen/_11sdp"
@@ -106,7 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Week Average:"
-            android:fontFamily="@font/opensans"
+            android:fontFamily="@font/poppinsregular"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="@dimen/_11sdp"
@@ -117,7 +113,7 @@
             android:layout_height="wrap_content"
             android:text="5.5 / 7"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:fontFamily="@font/opensans"
+            android:fontFamily="@font/poppinsregular"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="@dimen/_11sdp"
@@ -135,7 +131,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Month Average:"
-            android:fontFamily="@font/opensans"
+            android:fontFamily="@font/poppinsregular"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="@dimen/_11sdp"
@@ -146,7 +142,7 @@
             android:layout_height="wrap_content"
             android:text="4.2 / 7"
             android:layout_marginLeft="@dimen/_10sdp"
-            android:fontFamily="@font/opensans"
+            android:fontFamily="@font/poppinsregular"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="@dimen/_11sdp"
