--- a/app/src/main/res/layout/send_layout.xml
+++ b/app/src/main/res/layout/send_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/darkBG"
+    android:background="@color/darkBackground"
     android:padding="10dp">
 
     <LinearLayout
@@ -17,18 +17,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello Rajat!"
-            android:fontFamily="@font/opensans"
+            android:fontFamily="@font/poppinsregular"
             android:padding="12dp"
+            android:gravity="center"
             android:textStyle="bold"
             android:textSize="@dimen/_12sdp"
-            android:textColor="@color/black"
+            android:textColor="#ffffff"
             android:background="@drawable/chat_send"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="15dp"
-            android:src="@drawable/profpiclogo"/>
+            android:src="@drawable/femaleprofpic2"/>
     </LinearLayout>
 
 </RelativeLayout>
