--- a/app/src/main/res/layout/recieve_layout.xml
+++ b/app/src/main/res/layout/recieve_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/darkBG"
+    android:background="@color/darkBackground"
     android:padding="10dp">
 
     <LinearLayout
@@ -12,9 +12,10 @@
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginRight="15dp"
+            android:layout_gravity="center"
             android:scaleX="1.5"
             android:scaleY="1.5"
             android:src="@drawable/chatbot_logo"/>
@@ -24,11 +25,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello Rajat!"
-            android:fontFamily="@font/opensans"
+            android:fontFamily="@font/poppinsregular"
             android:padding="12dp"
             android:textStyle="bold"
             android:textSize="@dimen/_12sdp"
-            android:textColor="@color/black"
+            android:textColor="#ffffff"
             android:background="@drawable/chat_recieve"/>
     </LinearLayout>
 
