--- a/app/src/main/res/layout/action_chooser_layout.xml
+++ b/app/src/main/res/layout/action_chooser_layout.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppinssemibold"
-        android:text="Alright, Rajat. I got your problem.\n\nI would suggest you to first calm down and then talk to Alexa for solving your problem.\n\n\nWhat would you like to do?"
+        android:text="Hey Mahima, don't worry! I got you!\n\nI would suggest you to first calm down and then talk to Kia for solving your problem.\n\n\nWhat would you like to do?"
         android:textColor="@color/black"
         android:layout_marginTop="@dimen/_10sdp"
         android:textSize="@dimen/_13sdp"
@@ -109,7 +109,7 @@
                     android:textAlignment="center"
                     android:paddingBottom="10dp"
                     android:textStyle="bold"
-                    android:text="Talk to Alexa"
+                    android:text="Talk to Kia"
                     android:textColor="@color/darkTextColor"
                     android:textSize="@dimen/_12sdp" />
 
