--- a/app/src/main/res/layout/activity_counsellor_bot.xml
+++ b/app/src/main/res/layout/activity_counsellor_bot.xml
@@ -20,15 +20,16 @@
 
         <ImageView
             android:id="@+id/ivchart"
-            android:layout_width="37dp"
-            android:layout_height="37dp"
-            android:src="@drawable/ic_back_black"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_diary"
             android:layout_centerVertical="true" />
 
         <ImageView
             android:id="@+id/chatbotmenu"
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:visibility="invisible"
             android:layout_alignParentRight="true"
             android:src="@drawable/menu"
             android:layout_centerVertical="true" />
@@ -81,7 +82,7 @@
             android:layout_marginBottom="10dp"
             android:elevation="0dp"
             android:background="@drawable/circle"
-            android:backgroundTint="@color/newLightBlue"
+            android:backgroundTint="@color/colorPrimary"
             android:src="@drawable/ic_mic"/>
 
     </RelativeLayout>
