--- a/app/src/main/res/layout/activity_run_model.xml
+++ b/app/src/main/res/layout/activity_run_model.xml
@@ -23,7 +23,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/_250sdp"
-        android:layout_height="@dimen/_250sdp"
+        android:layout_height="@dimen/_300sdp"
         app:cardCornerRadius="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_50sdp"
         android:layout_centerHorizontal="true"
@@ -42,18 +42,18 @@
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
+
     <TextView
         android:id="@+id/textViewResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="@dimen/_350sdp"
-        android:padding="@dimen/_10sdp"
-        android:textSize="@dimen/_14sdp"
-        android:text="Glad to know that you're happy"
+        android:layout_marginTop="@dimen/_370sdp"
         android:fontFamily="@font/poppinssemibold"
-        android:textColor="@color/black" />
-
+        android:gravity="center"
+        android:padding="@dimen/_10sdp"
+        android:text="Sorry to know that you're sad!"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_14sdp" />
 
     <ImageView
         android:id="@+id/ivplaypause"
