--- a/app/src/main/res/layout/send_layout.xml
+++ b/app/src/main/res/layout/send_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/darkBackground"
+    android:background="@color/white"
     android:padding="10dp">
 
     <RelativeLayout
@@ -24,7 +24,7 @@
             android:layout_marginRight="55dp"
             android:layout_alignParentRight="true"
             android:textSize="@dimen/_12sdp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:background="@drawable/chat_send"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
