--- a/app/src/main/res/layout/activity_run_model.xml
+++ b/app/src/main/res/layout/activity_run_model.xml
@@ -23,7 +23,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/_250sdp"
-        android:layout_height="@dimen/_300sdp"
+        android:layout_height="@dimen/_250sdp"
         app:cardCornerRadius="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_50sdp"
         android:layout_centerHorizontal="true"
@@ -51,7 +51,7 @@
         android:fontFamily="@font/poppinssemibold"
         android:gravity="center"
         android:padding="@dimen/_10sdp"
-        android:text="Sorry to know that you're sad!"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="@dimen/_14sdp" />
 
